src/test/deca/context/invalid/sansObjet/affect-incompatible.deca
{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
